gungraun/tests/ui/test_library_benchmark_group_when_invalid.stderr
error: A library_benchmark_group! needs a name and at least 1 benchmark function annotated with #[library_benchmark]. See the documentation of this macro for more details.

       hint: library_benchmark_group!(name = some_ident, benchmarks = [ bench_1, bench_2 ]);
 --> tests/ui/test_library_benchmark_group_when_invalid.rs:4:5
  |
4 |     library_benchmark_group!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident; benchmarks = ...);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:13:5
   |
13 |     library_benchmark_group!(benchmarks = some_func);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident, benchmarks = ...);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:16:5
   |
16 | /     library_benchmark_group!(
17 | |         config = LibraryBenchmarkConfig::default(),
18 | |         compare_by_id = true,
19 | |         max_parallel = 0,
...  |
22 | |         benchmarks = some_func
23 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident; benchmarks = ...);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:25:5
   |
25 | /     library_benchmark_group!(
26 | |         config = LibraryBenchmarkConfig::default();
27 | |         compare_by_id = true;
28 | |         max_parallel = 0;
...  |
31 | |         benchmarks = some_func
32 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident; benchmarks = ...);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:34:5
   |
34 |     library_benchmark_group!(benchmarks = [some_func]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident; benchmarks = ...);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:35:5
   |
35 |     library_benchmark_group!(benchmarks = some_func, some_func);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident; benchmarks = ...);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:36:5
   |
36 |     library_benchmark_group!(benchmarks = [some_func, some_func]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `some` is defined multiple times
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:45:5
   |
45 |     library_benchmark_group!(name = some, benchmarks = some_func);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `some` redefined here
46 |     library_benchmark_group!(name = some, benchmarks = some_func);
   |     ------------------------------------------------------------- previous definition of the module `some` here
   |
   = note: `some` must be defined only once in the type namespace of this module
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the library_benchmark_group! macro to set up library benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: library_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ]);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:52:5
   |
52 |     library_benchmark_group!(name = some_name);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs at least 1 benchmark function annotated with #[library_benchmark]

       hint: library_benchmark_group!(name = some_ident, benchmarks = some_library_benchmark);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:59:5
   |
59 | /     library_benchmark_group!(
60 | |         name = some_name,
61 | |         benchmarks =
62 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs at least 1 benchmark function annotated with #[library_benchmark]

       hint: library_benchmark_group!(name = some_ident, benchmarks = some_library_benchmark);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:63:5
   |
63 | /     library_benchmark_group!(
64 | |         name = some_name,
65 | |         config = LibraryBenchmarkConfig::default(),
66 | |         compare_by_id = true,
...  |
70 | |         benchmarks =
71 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs at least 1 benchmark function annotated with #[library_benchmark]

       hint: library_benchmark_group!(name = some_ident; benchmarks = some_library_benchmark);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:74:5
   |
74 | /     library_benchmark_group!(
75 | |         name = some_name;
76 | |         benchmarks =
77 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs at least 1 benchmark function annotated with #[library_benchmark]

       hint: library_benchmark_group!(name = some_ident; benchmarks = some_library_benchmark);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:78:5
   |
78 | /     library_benchmark_group!(
79 | |         name = some_name;
80 | |         config = LibraryBenchmarkConfig::default();
81 | |         compare_by_id = true;
...  |
85 | |         benchmarks =
86 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the library_benchmark_group! macro to set up library benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: library_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ]);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:92:5
   |
92 |     library_benchmark_group!(something);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> tests/ui/test_library_benchmark_group_when_invalid.rs:102:60
    |
102 |     library_benchmark_group!(name = some_1, max_parallel = None, benchmarks = some_func);
    |     -------------------------------------------------------^^^^-------------------------
    |     |                                                      |
    |     |                                                      expected `usize`, found `Option<_>`
    |     expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`

error[E0308]: mismatched types
   --> tests/ui/test_library_benchmark_group_when_invalid.rs:103:60
    |
103 |     library_benchmark_group!(name = some_2, max_parallel = 0i32, benchmarks = some_func);
    |     -------------------------------------------------------^^^^-------------------------
    |     |                                                      |
    |     |                                                      expected `usize`, found `i32`
    |     expected due to this
    |
help: change the type of the numeric literal from `i32` to `usize`
    |
103 |     library_benchmark_group!(name = some_2, max_parallel = 0usize, benchmarks = some_func);
    |                                                             ~~~~~

error[E0308]: mismatched types
   --> tests/ui/test_library_benchmark_group_when_invalid.rs:107:24
    |
105 | /     library_benchmark_group!(
106 | |         name = some_3,
107 | |         max_parallel = None,
    | |                        ^^^^ expected `usize`, found `Option<_>`
108 | |         benchmarks = [some_func, some_func]
109 | |     );
    | |_____- expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`

error[E0308]: mismatched types
   --> tests/ui/test_library_benchmark_group_when_invalid.rs:112:60
    |
112 |     library_benchmark_group!(name = some_4; max_parallel = None; benchmarks = some_func);
    |     -------------------------------------------------------^^^^-------------------------
    |     |                                                      |
    |     |                                                      expected `usize`, found `Option<_>`
    |     expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`

error[E0308]: mismatched types
   --> tests/ui/test_library_benchmark_group_when_invalid.rs:113:60
    |
113 |     library_benchmark_group!(name = some_5; max_parallel = 0i32; benchmarks = some_func);
    |     -------------------------------------------------------^^^^-------------------------
    |     |                                                      |
    |     |                                                      expected `usize`, found `i32`
    |     expected due to this
    |
help: change the type of the numeric literal from `i32` to `usize`
    |
113 |     library_benchmark_group!(name = some_5; max_parallel = 0usize; benchmarks = some_func);
    |                                                             ~~~~~

error[E0308]: mismatched types
   --> tests/ui/test_library_benchmark_group_when_invalid.rs:116:24
    |
114 | /     library_benchmark_group!(
115 | |         name = some_6;
116 | |         max_parallel = None;
    | |                        ^^^^ expected `usize`, found `Option<_>`
117 | |         benchmarks = some_func, some_func
118 | |     );
    | |_____- expected due to this
    |
    = note: expected type `usize`
               found enum `Option<_>`
